# rk9_scraper

./: .gitignore  README.md  battlefy.py  bcp.py  fill_deck_records.py  parse_bcp_txt.py  pyproject.toml  rk9.py  scrape_matches.py  scrape_rankings.py  util.py
